objects/AsyncRequest__c/AsyncRequest__c.object-meta.xml
<CustomObject>
    <label>AsyncRequest</label>
    <nameField>
        <label>AsyncRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>