objects/AsyncRequest__c/fields/AsyncType__c.field-meta.xml
<CustomField>
    <fullName>AsyncType__c</fullName>
    <label>AsyncType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Sales Invoice Lines</fullName>
            </value>
            <value>
                <fullName>Add Surcharge Line to Sales Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>