objects/AsyncRequest__c/fields/Params1__c.field-meta.xml
<CustomField>
    <fullName>Params1__c</fullName>
    <label>Params1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>