objects/AsyncRequest__c/fields/Params2__c.field-meta.xml
<CustomField>
    <fullName>Params2__c</fullName>
    <label>Params2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>